# Twopic

./: .gitignore  pyproject.toml
tests/: test_twopic.py
twopic/: model.py  process.py
