[tool.poetry]
name = "Twopic"
version = "0.1.0"
description = ""
authors = ["Kydlaw <julien.coche@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.3.1"
pandas = "^1.1.2"
matplotlib = "^3.3.2"
bokeh = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
jupyter = "^1.0.0"
notebook = "^6.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
